unpackaged/main/default/objects/OrderApi__Connection_Type_Mapping__c/OrderApi__Connection_Type_Mapping__c.object-meta.xml
<CustomObject>
    <description>Connection Types map to other Connection Types using Connection Type Mappings.</description>
    <label>Connection Type Mapping</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Mapping ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connection Type Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>