unpackaged/main/default/objects/OrderApi__Connection_Type_Mapping__c/fields/OrderApi__Connection_Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Connection_Type__c</fullName>
    <description>**Required** The Connection Type being mapped to another Connection Type.</description>
    <inlineHelpText>**Required** The Connection Type being mapped to another Connection Type.</inlineHelpText>
    <label>Connection Type</label>
    <referenceTo>OrderApi__Connection_Type__c</referenceTo>
    <relationshipLabel>Connection Type Mappings</relationshipLabel>
    <relationshipName>Connection_Type_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>