unpackaged/main/default/objects/OrderApi__Connection_Type_Mapping__c/fields/OrderApi__Mapped_Connection_Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Mapped_Connection_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**Required** The Connection Type that is being mapped.</description>
    <inlineHelpText>**Required** The Connection Type that is being mapped.</inlineHelpText>
    <label>Mapped Connection Type</label>
    <referenceTo>OrderApi__Connection_Type__c</referenceTo>
    <relationshipLabel>Connection Type Mappings (Mapped Connection Type)</relationshipLabel>
    <relationshipName>Connection_Type_Mappings2</relationshipName>
    <type>Lookup</type>
</CustomField>