unpackaged/main/default/objects/OrderApi__Connection_Type_Mapping__c/fields/OrderApi__System_Created__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__System_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Field** Do not manually update or override. When checked the mapping is created by a trigger, when unchecked the mapping was created manually. Defaults to unchecked.</description>
    <inlineHelpText>**System Field** Do not manually update or override. When checked the mapping is created by a trigger, when unchecked the mapping was created manually. Defaults to unchecked.</inlineHelpText>
    <label>System Created</label>
    <type>Checkbox</type>
</CustomField>